--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vite-trello-web-base-project",
+  "name": "trello-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "author": "TrungQuanDev - Một Lập Trình Viên",
-  "description": "https://youtube.com/@trungquandev",
+  "author": "Nguyen Minh Hieu",
+  "description": "Trello clone project",
   "engines": {
     "node": ">=18.x"
   },
